
# --- Build system configuration

[build-system]
requires = [ "setuptools>=41", "setuptools-scm", ]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools-git-versioning]
enabled = true

[tool.setuptools_scm]  # this empty section enables the tool


# --- Project Metadata

[project]
name = "dbscan1d"
dynamic = ["version"]  # version is fetched by setuptools-git-versioning

authors = [
  { name="Derrick Chambers", email="chambers.ja.derrick@gmail.com" },
]

description = "An efficient implementation of the DBSCAN algorithm for 1D arrays."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
]

keywords = ["geophysics", "distributed-acoustic-sensing"]

# --- Dependencies

dependencies = [
     "numpy >= 1.13.0",
]

[project.optional-dependencies]

test = [
    "pytest",
    "pre-commit",
    "scikit-learn",
]
dev = ["dbscan1d[test]"]

# --- URLs for project

[project.urls]
"Bug Tracker" = "https://github.com/d-chambers/dbscan1d/issues"
"Documentation" = "https://github.com/d-chambers/dbscan1d"
"Homepage" = "https://github.com/d-chambers/dbscan1d"
