
# --- Build system configuration

[build-system]
requires = [ "setuptools>=41", "setuptools-scm", ]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools-git-versioning]
enabled = true

[tool.setuptools_scm]  # this empty section enables the tool


# --- Project Metadata

[project]
name = "dbscan1d"
dynamic = ["version"]  # version is fetched by setuptools-git-versioning

authors = [
  { name="Derrick Chambers", email="chambers.ja.derrick@gmail.com" },
]

description = "An efficient implementation of the DBSCAN algorithm for 1D arrays."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
]

keywords = ["geophysics", "distributed-acoustic-sensing"]

# --- Dependencies

dependencies = [
     "numpy >= 1.25.0",
]

[project.optional-dependencies]

test = [
    "pytest",
    "pytest-cov",
    "scikit-learn",
]
dev = ["dbscan1d[test]"]

# --- URLs for project

[project.urls]
"Bug Tracker" = "https://github.com/d-chambers/dbscan1d/issues"
"Documentation" = "https://github.com/d-chambers/dbscan1d"
"Homepage" = "https://github.com/d-chambers/dbscan1d"

# --- formatting

[tool.ruff]

line-length = 88

# enable certain types of linting
lint.select = [
    "E",
    "F",
    "UP",
    "RUF",
    "I001",
    "D",
    "FA",
    "T",
    "N",
    "NPY",
    "NPY201",
]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "__init__.py"
]

# lowest python version supported
target-version = "py310"

lint.fixable = ["ALL"]

# List of codes to ignore
lint.ignore = ["D105", "D107", "D401", "D205", "D200", "D400", "N803", "N806"]

[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

# config for docstring parsing
[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.pytest.ini_options]
filterwarnings = [
    # Ignore hdf5 warnings from pytables, See pytables #1035
    'ignore::Warning:tables:'
]

[tool.ruff.format]
# Use `\n` line endings for all files
line-ending = "lf"
